--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "devDependencies": {
-    "@swc/cli": "^0.1.55",
-    "@swc/core": "^1.2.148",
-    "@swc/jest": "^0.2.20",
-    "@types/jest": "^27.4.1",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.215",
+    "@swc/jest": "^0.2.21",
+    "@types/jest": "^28.1.5",
     "@types/jstoxml": "^2.0.2",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^8.3.4",
-    "jest": "^27.5.1",
-    "supertest": "^6.2.2",
-    "ts-node": "^10.6.0",
-    "typescript": "^4.5.5"
+    "jest": "^28.1.3",
+    "supertest": "^6.3.0",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.7.4"
   },
   "scripts": {
-    "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "test": "npm run tsc -- --noEmit && jest"   
   },
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "jstoxml": "^3.2.3",
-    "nodemon": "^2.0.15",
+    "@types/express": "^4.17.14",
+    "@types/uuid": "^8.3.4",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jstoxml": "^3.2.5",
+    "nodemon": "^2.0.20",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.17.0",
-    "sequelize-typescript": "^2.1.5",
-    "sqlite3": "^5.0.2",
+    "sequelize": "^6.21.3",
+    "sequelize-typescript": "^2.1.3",
+    "sqlite3": "^5.0.9",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   }
