chore: Desafio Criacao API

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "tsc": "tsc",
-    "test": "npm run tsc -- --noEmit && jest"   
+    "test": "npm run tsc -- --noEmit && jest",
+    "dev": "nodemon src/infrastructure/api/server.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.14",
